// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Basics / Component / With Inheritance base button 1`] = `
<ng-component>
  <storybook-base-button
    ng-reflect-label="this is label"
  >
    <button>
      this is label
    </button>
  </storybook-base-button>
</ng-component>
`;

exports[`Storyshots Basics / Component / With Inheritance icon button 1`] = `
<ng-component>
  <storybook-icon-button
    ng-reflect-icon="this is icon"
  >
    <button>
      this is label - this is icon
    </button>
  </storybook-icon-button>
</ng-component>
`;
